# codex-openfoam

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh  未来扩展.md
assets/test_geometries/: README.md  advanced_simplified_vehicle.stl  medium_cylinder_obstacle.stl  medium_ramp_wedge.stl  pipe_edges.csv  pipe_vertices.csv  simple_center_cube.stl  small_obstacle_cube.stl  sphere_body.csv
src/foamdesk/: __init__.py
src/foamdesk/app/: bootstrap.py  main.py
src/foamdesk/domain/: __init__.py  models.py
src/foamdesk/integrations/: __init__.py
src/foamdesk/integrations/openfoam/: __init__.py  environment.py
src/foamdesk/services/: case_parameter_service.py  geometry_import_service.py  log_diagnostic_service.py  log_metric_service.py  metric_export_service.py  openfoam_vtk_service.py  project_service.py  report_export_service.py  residual_plot_service.py  result_index_service.py  settings_service.py
src/foamdesk/ui/: __init__.py  main_window.py  startup_window.py  theme.py
tests/unit/: test_case_parameter_service.py  test_environment.py  test_log_diagnostic_service.py  test_log_metric_service.py  test_metric_export_service.py  test_openfoam_vtk_service.py  test_project_service.py  test_residual_plot_service.py  test_result_index_service.py
对话记录/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  45.md  (+55 more)
