[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamdesk"
version = "0.1.0"
description = "Python desktop client for OpenFOAM on WSL/Linux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8,<7.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<0.7",
]

[project.scripts]
foamdesk = "foamdesk.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

